--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,9 +20,15 @@ services:
       - "4000:4000"
     depends_on:
       - postgres
+      - minio
     environment:
       - NODE_ENV=production
       - DATABASE_URL=postgres://postgres:postgres@postgres:5432/autoscriber
+      - OBJECT_STORE_URL=minio
+      - OBJECT_STORE_PORT=9000
+      - OBJECT_STORE_ACCESS_KEY=minioadmin
+      - OBJECT_STORE_SECRET_KEY=minioadmin
+      - OBJECT_STORE_BUCKET=autoscriber
 
   postgres:
     image: postgres:13
@@ -34,3 +40,20 @@ services:
       - "5432:5432"
     volumes:
       - ./data/postgres:/var/lib/postgresql/data
+
+  minio:
+    image: minio/minio
+    command: server /data --console-address ":9001"
+    environment:
+      - MINIO_ROOT_USER=minioadmin
+      - MINIO_ROOT_PASSWORD=minioadmin
+    volumes:
+      - ./data/minio:/data
+    ports:
+      - "9000:9000"
+      - "9001:9001"
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:9000/minio/health/live"]
+      interval: 30s
+      timeout: 20s
+      retries: 3
