--- a/server/.env
+++ b/server/.env
@@ -12,4 +12,5 @@ OBJECT_STORE_PORT=9000
 OBJECT_STORE_ACCESS_KEY=minioadmin
 OBJECT_STORE_SECRET_KEY=minioadmin
 OBJECT_STORE_BUCKET=autoscriber
+OBJECT_STORE_PUBLIC_HOST=localhost:9000
 
