--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,16 @@
 version: '3.8'
 
 services:
-  client:
-    build:
-      context: .
-      dockerfile: ./client/Dockerfile
-    ports:
-      - "8080:80"
-    depends_on:
-      - server
-    environment:
-      - NODE_ENV=production
+  # client:
+  #   build:
+  #     context: .
+  #     dockerfile: ./client/Dockerfile
+  #   ports:
+  #     - "8080:80"
+  #   depends_on:
+  #     - server
+  #   environment:
+  #     - NODE_ENV=production
 
   server:
     build:
